# rust-relational_algebra

./: Cargo.toml  README.md
.github/workflows/: #rust.yml#  _release.yml  rust.yml
src/: ast.rs  data.rs  error.rs  eval.rs  graph.rs  lib.rs  ops.rs  sort.rs
src/eval/: mod.rs  ops.rs
src/simple/: data.rs  mod.rs  sort.rs
src/simple/io/: mod.rs
tests/: ast.rs  graph.rs
