[package]
name = "relational-algebra"
description = "Placeholder for Relational Algebra model and tools."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/johnstonskj/rust-relational_algebra"
license-file = "LICENSE"
readme = "README.md"

[features]
default = ["simple-data"]
simple-data = ["serde_json", "csv"]
graphviz = []

[dependencies]
combine = "4.6"
lazy_static = "1.4"
regex = "1.6"
tracing = "0.1"

# serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
csv = { version = "1.1", optional = true }
