[package]
name = "relational-algebra"
description = "Relational Algebra model and tools."
version = "0.1.1"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2021"
documentation = "https://docs.rs/relational_algebra/"
repository = "https://github.com/johnstonskj/rust-relational_algebra"
license-file = "LICENSE"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "doc/katex-header.html" ]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[future-incompat-report]
frequency = "always"

[features]
default = ["simple_data", "graphviz"]
simple_data = ["serde_json", "csv"]
graphviz = ["simple_dot"]

[dependencies]
combine = "4.6"
lazy_static = "1.4"
regex = "1.7"
tracing = "0.1"

#[optional-dependencies]
csv = { version = "1.1", optional = true }
serde_json = { version = "1.0", optional = true }
simple_dot = { version = "0.1.0", optional = true }
